# Testing-script

./: .dockerignore  Cargo.toml  Dockerfile  run-forever.sh
.cargo/: config.toml
src/: convert.rs  flood_test.rs  main.rs
tmp/spark_test_sdk/mainnet/69d5b99b/: storage.sql
tmp/spark_test_sdk/regtest/04022b61/: storage.sql
