[package]
name = "testing_script"
version = "0.1.0"
edition = "2021"

# In Cargo.toml, add this:
[[bin]]
name = "flood_test"
path = "src/flood_test.rs"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk", tag = "0.11.0" }
eyre = "0.6"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
rand = "0.8"
bip39 = "2.0"
color-eyre = "0.6"
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
solana-sdk = "2.1"
solana-client = "2.1"
bs58 = "0.5"
base64 = "0.22"
bincode = "1.3"
dotenvy = "0.15.7"


